# helixscreen

./: .clangd  .claudeignore  .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.txt  COPYRIGHT  Makefile  README.md  lv_conf.h
.claude/: settings.json
.claude-recall/: LESSONS.md
.github/workflows/: build.yml  cleanup-r2.yml  nightly.yml  release.yml
android/app/jni/: CMakeLists.txt
assets/: cfs_materials.json
assets/config/: printer_database.json
assets/fonts/: mdi_icons_14.c  mdi_icons_16.c  mdi_icons_20.c  mdi_icons_24.c  mdi_icons_28.c  mdi_icons_32.c  mdi_icons_40.c  mdi_icons_48.c  mdi_icons_56.c  mdi_icons_64.c  mdi_icons_80.c  mdi_icons_96.c  noto_sans_10.c  noto_sans_11.c  noto_sans_12.c  noto_sans_14.c  noto_sans_16.c  noto_sans_18.c  noto_sans_20.c  noto_sans_24.c  noto_sans_26.c  noto_sans_28.c  noto_sans_8.c  noto_sans_bold_14.c  noto_sans_bold_16.c  noto_sans_bold_18.c  noto_sans_bold_20.c  noto_sans_bold_24.c  noto_sans_bold_28.c  noto_sans_light_10.c  noto_sans_light_11.c  noto_sans_light_12.c  noto_sans_light_14.c  noto_sans_light_16.c  noto_sans_light_18.c  noto_sans_light_8.c  noto_sans_light_9.c  source_code_pro_10.c  source_code_pro_12.c  source_code_pro_14.c  (+2 more)
config/: default_layout.json  helixconfig.json.template  helixscreen-update.service  helixscreen.service  printer_database.json  refresh-service-units.sh  settings.json.template
config/platform/: hooks-ad5m-zmod.sh  hooks-k1.sh  hooks-snapmaker-u1.sh
config/presets/: README.md  ad5m.json  ad5m_pro.json  ad5m_pro_zmod.json  ad5m_zmod.json  ad5x.json  artillery-m1-pro.json  cc1.json  k1.json  k2.json  snapmaker-u1.json
config/print_start_profiles/: creality_k2.json
docker/: Dockerfile.ad5x  Dockerfile.k1  Dockerfile.k1-dynamic  Dockerfile.pi  Dockerfile.pi32  Dockerfile.snapmaker-u1  Dockerfile.x86
docs/: README.md
docs/devel/: ARCHITECTURE.md  BUILD_SYSTEM.md  CI_CD_GUIDE.md  CLAUDE.md  CONFIG_MIGRATION.md  CRASH_REPORTER.md  DEVELOPER_QUICK_REFERENCE.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  EXCLUDE_OBJECTS.md  FILAMENT_MANAGEMENT.md  GCODE_VIEWER_CONFIG.md  INSTALLER.md  LABEL_PRINTER_SYSTEM.md  LAYOUT_SYSTEM.md  LED_CONTROL.md  LVGL9_XML_GUIDE.md  MODAL_SYSTEM.md  MOONRAKER_ARCHITECTURE.md  MULTI_PRINTER.md  PLUGIN_DEVELOPMENT.md  PREPRINT_PREDICTION.md  PRINTER_MANAGER.md  RELEASE_PROCESS.md  ROADMAP.md  SOUND_SYSTEM.md  STANDARD_MACROS_SPEC.md  TELEMETRY_ADMIN.md  TESTING.md  TIMELAPSE.md  UI_CONTRIBUTOR_GUIDE.md  UPDATE_SYSTEM.md  YOCTO_BUILD.md
docs/plans/: 2026-02-25-grid-edit-mode.md  2026-03-04-proportional-buffer-feedback.md  (+7 more)
include/: abort_manager.h  accel_sensor_manager.h  action_prompt_modal.h  active_print_media_manager.h  afc_config_manager.h  ams_backend.h  ams_backend_ace.h  ams_backend_ad5x_ifs.h  ams_backend_afc.h  ams_backend_cfs.h  ams_backend_happy_hare.h  ams_backend_mock.h  ams_backend_snapmaker.h  ams_backend_valgace.h  ams_state.h  ams_subscription_backend.h  ams_types.h  app_constants.h  app_globals.h  application.h  async_lifetime_guard.h  bed_mesh_probe_parser.h  belt_tension_calibrator.h  belt_tension_types.h  bluetooth_loader.h  bluetooth_plugin.h  border_radius_sizes.h  brother_pt_bt_printer.h  brother_ql_protocol.h  bt_discovery_utils.h  bt_print_utils.h  camera_config_modal.h  camera_stream.h  capability_overrides.h  cli_args.h  color_sensor_manager.h  color_transform.h  config.h  config_backup.h  data_root_resolver.h  (+235 more)
lib/: mdns
mk/: bluetooth.mk  cross.mk  deps.mk  display-lib.mk  fonts.mk  patches.mk  pi-dual-link.mk  rules.mk  splash.mk  tests.mk  tools.mk  watchdog.mk
patches/: README.md  libhv-dns-resolver-fallback.patch  libhv-openssl-static-link.patch  lvgl-drm-flush-rotation.patch  lvgl-evdev-protocol-a.patch  lvgl-fbdev-buffer-align.patch  lvgl-sw-draw-wait-for-finish.patch  lvgl_arc_subject_null_guard.patch  lvgl_draw_sdl_stride_fix.patch  lvgl_draw_sw_label_null_guard.patch  lvgl_event_crash_hook.patch  lvgl_obj_delete_async_dedup.patch  lvgl_obj_delete_null_guards.patch  lvgl_obj_get_screen_cycle_guard.patch  lvgl_obj_pos_null_guards.patch  lvgl_observer_null_guards.patch  lvgl_observer_remove_null_guard.patch  lvgl_sdl_sw_android_debug.patch  lvgl_sdl_sw_android_render.patch
scripts/: CLAUDE.md  bundle-installer.sh  check-deps.sh  dev-release.sh  extract-panel-seed.sh  gen-contributors.sh  generate-manifest.sh  install-dev.sh  install.sh  package.sh  regen_mdi_fonts.sh  regen_text_fonts.sh  resolve-backtrace.sh  screenshot.sh  serve-local-update.sh  snapmaker-u1-setup-autostart.sh  telemetry-backfill.sh  telemetry-crashes.py  telemetry-printer-profiles.py  telemetry-update-printer-db.py  touch-diag.sh  uninstall.sh  yocto-docker.sh
src/: app_globals.cpp  format_utils.cpp  helix_splash.cpp  helix_watchdog.cpp  layout_manager.cpp  lvgl_init.cpp  main.cpp  xml_registration.cpp
tests/: helix_test_fixture.cpp  helix_test_fixture.h  lvgl_ui_test_fixture.cpp  test_border_radius_sizes.cpp  tsan_suppressions.txt  ui_test_utils.cpp  ui_test_utils.h
tools/: moonraker_inspector.cpp  moonraker_inspector_interactive.cpp  ui_notification_stub.cpp
translations/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  pt.yml  ru.yml  zh.yml
ui_xml/: about_settings_overlay.xml  advanced_panel.xml  ams_context_menu.xml  ams_edit_modal.xml  ams_environment_overlay.xml  ams_overview_panel.xml  ams_panel.xml  ams_unit_card.xml  bed_mesh_calibrate_modal.xml  bed_mesh_panel.xml  calibration_pid_panel.xml  color_picker.xml  controls_panel.xml  display_settings_overlay.xml  exclude_objects_list_overlay.xml  fan_dial.xml  fan_settings_overlay.xml  fan_settings_row.xml  fan_status_card.xml  favorite_macro_picker.xml  filament_mapping_modal.xml  filament_panel.xml  filament_picker_modal.xml  gcode_test_panel.xml  globals.xml  history_detail_overlay.xml  home_panel.xml  icon.xml  info_qr_modal.xml  input_shaper_panel.xml  label_printer_settings.xml  macro_card.xml  macro_param_modal.xml  material_temps_overlay.xml  modal_dialog.xml  motion_panel.xml  navigation_bar.xml  panel_belt_tension.xml  power_panel.xml  print_file_card.xml  (+41 more)
(+728 files in other folders)
